--- a/SampleWebApplication/Views/Companies/Index.cshtml
+++ b/SampleWebApplication/Views/Companies/Index.cshtml
@@ -1,1 +1,52 @@
-﻿<h2>Companies List</h2>
+﻿@model List<Company>
+
+@{
+    ViewData["Title"] = "Companies List";
+}
+
+<h2>Companies List</h2>
+
+<!-- 検索フォーム -->
+<!-- asp-action="Search" で CompanyController の Search アクションを指定しています -->
+<form asp-action="Search" method="get">
+    <p>
+        <!-- 会社名の入力欄 -->
+        @Html.DisplayNameFor(model => model.First().Name)
+        <input type="text" name="companyName" />
+        <!-- 検索ボタン -->
+        <input type="submit" value="Search" />
+    </p>
+</form>
+
+<!-- 会社情報を表示するテーブル -->
+<table class="table">
+    <thead>
+        <tr>
+            <!-- テーブルのヘッダー部分 -->
+            <th>
+                <!-- ID列のヘッダー -->
+                @Html.DisplayNameFor(model => model.First().CompanyId)
+            </th>
+            <th>
+                <!-- 会社名列のヘッダー -->
+                @Html.DisplayNameFor(model => model.First().Name)
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+        <!-- 会社ID、会社名を行として表示 -->
+        @foreach (var item in Model)
+        {
+            <tr>
+                <!-- 会社のIDを表示するセル -->
+                <td>
+                    @Html.DisplayFor(modelItem => item.CompanyId)
+                </td>
+                <!-- 会社の名前を表示するセル -->
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
